--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,26 +1,36 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD html 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-<title>InterDB Connectivity</title>
-<link rel="home" title="syncdb " href="index.html">
-<link rel="stylesheet" TYPE="text/css"href="style.css">
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>InterDB Connectivity</title>
+    <link rel="home" title="syncdb " href="index.html">
+    <link rel="stylesheet" TYPE="text/css"href="style.css">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 </head>
 
 <body>
-<h1 id="interdb">InterDB Connectivity</h1>
+    <h1 id="interdb">InterDB Connectivity</h1>
 
-<p>
-本プロジェクトは、 dblink_plus 及び syncdb を提供します。<br>
+    <p> この<a href="http://sourceforge.net/projects/interdbconnect/">プロジェクト</a>は、 dblink_plus 及び syncdb を提供します。 </p>
 
-<ol>
-<li> <a href="syncdb/syncdb-ja.html">syncdb</a> </li>
-<li> <a href="dblink_plus/dblink_plus-ja.html">dblink_plus</a> </li>
-</ol>
+    <p>
+    マニュアル
+    <ol>
+    <li> <a href="syncdb/syncdb-ja.html">syncdb</a> </li>
+    <li> <a href="dblink_plus/dblink_plus-ja.html">dblink_plus</a> </li>
+    </ol>
+    </p>
 
-</p>
+    <p>
+    ダウンロード
+    <ol>
+    <li> <a href="http://sourceforge.net/projects/interdbconnect/files/">syncdb</a> </li>
+    <li> <a href="http://sourceforge.net/projects/interdbconnect/files/">dblink_plus</a> </li>
+    </ol>
+    </p>
 
-<p class="footer">Copyright (c) 2008-2011, NIPPON TELEGRAPH AND TELEPHONE CORPORATION</p>
+    <p> その他の情報に関しては<a href="http://sourceforge.net/projects/interdbconnect/">プロジェクトページ</a>を参照ください。 </p>
 
+    <p class="footer">Copyright (c) 2008-2011, NIPPON TELEGRAPH AND TELEPHONE CORPORATION</p>
 </body>
+
 </html>
