--- a/public_html/index.html
+++ b/public_html/index.html
@@ -21,12 +21,21 @@
     </p>
 
     <p>
-    ダウンロード
+    ダウンロード(ソースコード/バイナリ)
     <ol>
-    <li> <a href="http://sourceforge.net/projects/interdbconnect/files/">syncdb</a> </li>
-    <li> <a href="http://sourceforge.net/projects/interdbconnect/files/">dblink_plus</a> </li>
+    <li> <a href="http://sourceforge.net/projects/interdbconnect/files/">ダウンロード</a> </li>
     </ol>
     </p>
+
+    <p>
+    その他の情報
+    <ol>
+    <li> <a href="http://sourceforge.net/apps/trac/interdbconnect/">プロジェクトwiki</a>: マニュアル化されていない、運用TIPSや詳細仕様などを記載します。 </li>
+    <li> <a href="http://sourceforge.net/projects/interdbconnect/develop">最新ソースコード</a>: 開発の最新のコードをダウンロードできます </li>
+    <li> <a href="http://sourceforge.net/tracker/?group_id=565635">バグ・開発中の機能</a>: SourceforgeのIssue Trackerでチケット情報が見られます。 </li>
+    </ol>
+    </p>
+
 
     <p> その他の情報に関しては<a href="http://sourceforge.net/projects/interdbconnect/">プロジェクトページ</a>を参照ください。 </p>
 
