--- a/public_html/index.html
+++ b/public_html/index.html
@@ -10,13 +10,14 @@
 <body>
     <h1 id="interdb">InterDB Connectivity</h1>
 
-    <p> この<a href="http://sourceforge.net/projects/interdbconnect/">プロジェクト</a>は、 dblink_plus 及び syncdb を提供します。 </p>
+    <p> この<a href="http://sourceforge.net/projects/interdbconnect/">プロジェクト</a>は、 dblink_plus, syncdb 及び pgsql_fdw を提供します。 </p>
 
     <p>
     マニュアル
     <ol>
     <li> <a href="syncdb/syncdb-ja.html">syncdb</a> </li>
     <li> <a href="dblink_plus/dblink_plus-ja.html">dblink_plus</a> </li>
+    <li> <a href="pgsql_fdw/pgsql_fdw-ja.html">pgsql_fdw</a> </li>
     </ol>
     </p>
 
