--- a/public_html/index.html
+++ b/public_html/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1 id="interdb">InterDB Connectivity</h1>
 
-    <p> この<a href="http://sourceforge.net/projects/interdbconnect/">プロジェクト</a>は、 dblink_plus, syncdb 及び pgsql_fdw を提供します。 </p>
+    <p> この<a href="http://sourceforge.net/projects/interdbconnect/">プロジェクト</a>は、 dblink_plus, syncdb, PostgreSQL9.1 向けpgsql_fdw, 及びPostgreSQL9.1向けoracle_fdw を提供します。 </p>
 
     <p>
     マニュアル
@@ -18,6 +18,7 @@
     <li> <a href="syncdb/syncdb-ja.html">syncdb</a> </li>
     <li> <a href="dblink_plus/dblink_plus-ja.html">dblink_plus</a> </li>
     <li> <a href="pgsql_fdw/pgsql_fdw-ja.html">pgsql_fdw</a> </li>
+    <li> <a href="oracle_fdw/oracle_fdw-ja.html">oracle_fdw</a> </li>
     </ol>
     </p>
 
